Removed the word 'Test'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h1>think[box] STL Volume Calculator Test</h1>
+    <h1>think[box] STL Volume Calculator</h1>
     <p>
       This is to test the functionality of calculating STL volumes.
     </p>
